k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mp4
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    # max upload size: 16 MB
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  ingressClassName: nginx
  rules:
  - host: mp4.kwk8s.tech
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mp4-server
            port:
              number: 3000
  tls:
  - hosts:
    - mp4.kwk8s.tech
    secretName: mp4-cert
